<resources>
	<!-- MainActivity -->
	<string name="app_name">我的测试</string>
	<string name="tv_title">我的测试</string>
	<string name="btn_test_handler">测试Handler</string>
	<string name="btn_test_memory_leak">测试内存泄漏</string>
	<string name="title_memory_leak">内存泄漏</string>
	<string name="title_router">路由功能</string>
	<string name="title_wlan">扫描局域网</string>
	<string name="title_customized_view">自定义View</string>
	<string name="title_file_monitor_test">文件监控测试</string>
	<string name="title_back_service">后台服务列表</string>
	<string name="title_file_share">文件共享</string>
	<string name="title_read_contact">读取联系人</string>
	<string name="title_other_test">其他测试</string>

	<!-- RouterActivity -->
	<string name="router_label_ip">IP 地址</string>
	<string name="router_label_mac">MAC 地址</string>
	<string name="router_label_wlan">WLAN0 信息</string>
	<string name="router_label_router">Router</string>

	<!-- WlanActivity -->

	<!-- CustomizedViewActivity -->

	<!-- FileMonitorActivity -->
	<string name="file_monitor_create_file">创建/删除文件</string>
	<string name="file_monitor_modify_file">修改文件</string>
	<string name="file_monitor_scan_file">扫描Android/data</string>
	<string name="file_monitor_read_time">读取测试文件时间</string>

	<!-- DeviceInfoActivity -->
	<string name="router_label_ipv6">IPV6 地址</string>
	<string name="router_label_validate_ipv6">真实ipv6</string>
</resources>
