<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="20dp"
	android:gravity="center_horizontal"
	android:orientation="vertical">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/tv_title"
		android:layout_marginBottom="20dp"
		android:textSize="18dp"/>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scrollbars="none">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
					android:id="@+id/btn_handler"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginBottom="@dimen/btn_marginBottom"
					android:text="@string/btn_test_handler"
					android:textSize="@dimen/btn_text_size"/>
				<Button
					android:id="@+id/btn_memory_leak"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginBottom="@dimen/btn_marginBottom"
					android:text="@string/title_memory_leak"
					android:textSize="@dimen/btn_text_size"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
					android:id="@+id/btn_router"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginBottom="@dimen/btn_marginBottom"
					android:text="@string/title_router"
					android:textSize="@dimen/btn_text_size"/>
				<Button
					android:id="@+id/btn_wlan"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginBottom="@dimen/btn_marginBottom"
					android:text="@string/title_wlan"
					android:textSize="@dimen/btn_text_size"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
					android:id="@+id/btn_customizedView"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginBottom="@dimen/btn_marginBottom"
					android:text="@string/title_customized_view"
					android:textSize="@dimen/btn_text_size"/>
				<Button
					android:id="@+id/btn_file_monitor_test"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginBottom="@dimen/btn_marginBottom"
					android:text="@string/title_file_monitor_test"
					android:textSize="@dimen/btn_text_size"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
					android:id="@+id/btn_backservice"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginBottom="@dimen/btn_marginBottom"
					android:text="@string/title_back_service"
					android:textSize="@dimen/btn_text_size"/>
				<Button
					android:id="@+id/btn_file_share"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginBottom="@dimen/btn_marginBottom"
					android:text="@string/title_file_share"
					android:textSize="@dimen/btn_text_size"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
